syntax = 'proto3';

package auth.endpoint;

option go_package = "github.com/ducketlab/auth/pkg/endpoint";

import "pkg/endpoint/pb/request.proto";
import "pkg/endpoint/pb/endpoint.proto";

service EndpointService {
  rpc DescribeEndpoint(DescribeEndpointRequest) returns(Endpoint);
  rpc QueryEndpoints(QueryEndpointRequest) returns(Set);
  rpc Registry(RegistryRequest) returns(RegistryResponse);
  rpc DeleteEndpoint(DeleteEndpointRequest) returns(Endpoint);
}